[package]
name = "rust-psp-prxencrypter"
authors = ["gmnprada"]
version = "0.1.2"
edition = "2021"

[lib]
name = "rspspkirk"
path = "rspspkirk/lib.rs"
crate-type = ["lib", "staticlib"]

[dependencies]
clap = "4.0.19"
lazy_static = "1.4.0"
rand = "0.8.5"

[[bin]]
name = "rsprxencrypter"
path = "src/main.rs"


