[package]
name = "rust-psp-prxencrypter"
authors = ["Gde Made Novan Priambhada"]
version = "0.1.4"
edition = "2021"
repository = "https://github.com/madepriambhada/rust-psp-prxencrypter"
license = "MIT"

[lib]
name = "rspspkirk"
path = "rspspkirk/lib.rs"
crate-type = ["lib", "staticlib"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
flate2 = "1.0.27"
lazy_static = "1.4.0"
rand = "0.8.5"

[[bin]]
name = "rsprxencrypter"
path = "src/main.rs"


